[SG-1922] -- more color contrast fixes. 404 search button focus, resource collection about section, and "Part of" section for more content types

--- a/web/themes/custom/sfgovpl/src/sass/components/_banner.scss
+++ b/web/themes/custom/sfgovpl/src/sass/components/_banner.scss
@@ -144,6 +144,7 @@
     background-color: $c-blue-2;
   }
 
+  .page-node-type-resource-collection &,
   .page-node-type-meeting &,
   .page-node-type-data-story & {
     .hero-banner-label *:focus {
